Repaired arrows bug

--- a/src/styles/components/_header__nav.scss
+++ b/src/styles/components/_header__nav.scss
@@ -105,6 +105,10 @@
 .header__nav__trigger {
   margin-left: auto;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   @include bp-medium {
     display: none;
   }
